# sdexe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  sdexe-video-script.md  vercel.json
sdexe/: __init__.py  app.py  tools.py
sdexe/static/: app.js  av.js  convert.js  images.js  pdf.js  style.css  text.js
sdexe/templates/: about.html  av.html  base.html  convert.html  home.html  images.html  media.html  pdf.html  settings.html  text.html
site/: contact.html  index.html
