[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdexe"
version = "0.1.13"
description = "Local tools for media downloads, PDF manipulation, image processing, file conversion, audio/video processing, and text utilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "yt-dlp",
    "pypdf",
    "Pillow",
    "markdown",
    "rich",
    "pystray",
    "PyYAML",
]

[project.scripts]
sdexe = "sdexe.app:main"

[tool.setuptools.packages.find]
include = ["sdexe*"]

[tool.setuptools.package-data]
sdexe = ["templates/**/*", "static/**/*"]
