[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdexe"
version = "0.2.14"
description = "Suite for Downloading, Editing & eXporting Everything — local tools for media, PDF, images, AV, file conversion, and text"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "yt-dlp",
    "pypdf",
    "Pillow",
    "markdown",
    "rich",
    "pystray",
    "PyYAML",
    "qrcode",
]

[project.scripts]
sdexe = "sdexe.app:main"

[tool.setuptools.packages.find]
include = ["sdexe*"]

[tool.setuptools.package-data]
sdexe = ["templates/**/*", "static/**/*"]
